Apply Steve's patch for #SSG-1869 with Tarari RPM
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@16888 219f1c6e-4a0e-43c8-96f2-6e749be13fd4