@@ -1,7 +1,5 @@
 #!/bin/sh
 
-echo "Got arguments: " $@
-
 if [ "$1" = "jpda" ] ; then
   if [ -z "$JPDA_TRANSPORT" ]; then
     JPDA_TRANSPORT="dt_socket"
@@ -31,7 +29,7 @@ if [ "$1" = "start" ] ; then
        rm -f $GATEWAY_SHUTDOWN
    fi
 
-    ${JAVA_HOME}/bin/java $JAVA_OPTS -jar Gateway.jar "$@" &
+    ${JAVA_HOME}/bin/java -Djava.ext.dirs="${SSG_HOME}/jdk/jre/lib/ext:${SSG_HOME}/lib/ext" $JAVA_OPTS -jar Gateway.jar "$@" &
 
     if [ ! -z "$GATEWAY_PID" ]; then
         echo $! > $GATEWAY_PID
